syntax = "proto3";

message EmptyRequest {}

// 登录请求
message LoginRequest {
  string username = 1;
  string password = 2;
}
// 登录响应
message LoginResponse {
    int32 code = 1; //[0]成功
	string user_id = 2;
	string nickname = 3;
	string token = 4;
}

//message LogoutRequest {} //发送空包即可
message LogoutResponse {
    int32 code = 1;
    string message = 2;
}

message FriendListRequest {
  // (可选) 分页的页码，从 1 开始。
  //int32 page_number = 2;
  
  // (可选) 每页的好友数量。
  //int32 page_size = 3;
}
message FriendListResponse {
  // 所有的好友列表。`repeated` 关键字表示这是一个列表。
  repeated Friend friends = 1;
  
  // (可选) 当前页码。
  //int32 page_number = 2;
  
  // (可选) 总页数。
  //int32 total_pages = 3;
}
// 单个好友信息。
message Friend {
  // 好友的唯一 ID。
  string friend_id = 1;
  
  // 好友的昵称。
  string nickname = 2;
  
  // 好友的头像 URL。
  string avatar_url = 3;
  
  // 好友的在线状态，使用枚举类型可以更清晰。
  enum Status {
    STATUS_UNSPECIFIED = 0;
    ONLINE = 1;
    OFFLINE = 2;
  }
  Status status = 4;
}
